--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="assets/img/rhm_logo.png" type="image/png" />
 
     <!--=============== REMIXICONS ===============-->
     <link
@@ -18,7 +18,7 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Responsive Website Travel</title>
+    <title>Race Hunter Media</title>
   </head>
   <body>
     <header class="header" id="header">
@@ -65,7 +65,7 @@
         <!-- <img id="portada" src="assets/img/rhm/home1.jpg" alt="" class="home__img"> -->
         <img
           id="main_image"
-          src="assets/img/rhm/home_medium.jpg"
+          src="https://i.imgur.com/opK4Hin.jpg"
           class="home__img"
         />
 
@@ -145,7 +145,7 @@
           <div class="about__img">
             <div class="about__img-overlay">
               <img
-                src="assets/img/rhm/experiense.jpg"
+                src="https://i.imgur.com/sC8wh2D.jpg"
                 alt=""
                 class="about__img-one"
               />
@@ -153,7 +153,7 @@
 
             <div class="about__img-overlay">
               <img
-                src="assets/img/rhm/about1.jpg"
+                src="https://i.imgur.com/40SKDFz.jpg"
                 alt=""
                 class="about__img-two"
               />
@@ -180,7 +180,7 @@
             <!--==================== PRIVATE ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/rhm/private.jpg"
+                src="https://i.imgur.com/mtE8uhW.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -194,7 +194,7 @@
             <!--==================== SANDDRAG ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/rhm/sanddrag.jpg"
+                src="https://i.imgur.com/Z1o1HLa.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -207,7 +207,7 @@
             <!--==================== DRIFT ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/rhm/Drift.jpg"
+                src="https://i.imgur.com/H9ZfiWs.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -220,7 +220,7 @@
             <!--==================== DRAG ====================-->
             <div class="discover__card swiper-slide">
                 <img
-                  src="assets/img/rhm/Drag.jpg"
+                  src="https://i.imgur.com/id0Itre.jpg"
                   alt=""
                   class="discover__img"
                 />
@@ -233,7 +233,7 @@
             <!--==================== OFFROARD ====================-->
             <div class="discover__card swiper-slide">
               <img
-                src="assets/img/rhm/offroad.jpg"
+                src="https://i.imgur.com/lUAg78b.jpg"
                 alt=""
                 class="discover__img"
               />
@@ -283,7 +283,7 @@
           <div class="experience__img grid">
             <div class="experience__overlay">
               <img
-                src="assets/img/rhm/about2.jpg"
+                src="https://i.imgur.com/toatEgs.jpg"
                 alt=""
                 class="experience__img-one"
               />
@@ -291,7 +291,7 @@
 
             <div class="experience__overlay">
               <img
-                src="assets/img/rhm/homebutton.jpg"
+                src="https://i.imgur.com/kbPjT0u.jpg"
                 alt=""
                 class="experience__img-two"
               />
@@ -467,16 +467,16 @@
       <section class="sponsor section">
         <div class="sponsor__container container grid">
           <div class="sponsor__content">
-            <img src="assets/img/rhm/rrp.png" alt="" class="sponsor__img" />
+            <img src="https://i.imgur.com/48DDXbG.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/rhm/DoitDyno.png" alt="" class="sponsor__img" />
+            <img src="https://i.imgur.com/pBehmK1.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/rhm/elite.png" alt="" class="sponsor__img" />
+            <img src="https://i.imgur.com/UVRzuOZ.png" alt="" class="sponsor__img" />
           </div>
           <div class="sponsor__content">
-            <img src="assets/img/rhm/sportcarmotion.png" alt="" class="sponsor__img" />
+            <img src="https://i.imgur.com/rMptfeq.png" alt="" class="sponsor__img" />
           </div>
           
         </div>
