update social media

--- a/index.html
+++ b/index.html
@@ -85,25 +85,24 @@
 
           <div class="home__social">
             <a
-              href="https://www.facebook.com/"
-              target="_blank"
+              href="https://www.facebook.com/profile.php?id=100047317403155"
               class="home__social-link"
             >
               <i class="ri-facebook-box-fill"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
+              href="https://www.instagram.com/racehuntermedia/"
               target="_blank"
               class="home__social-link"
             >
               <i class="ri-instagram-fill"></i>
             </a>
             <a
-              href="https://twitter.com/"
+              href="https://www.youtube.com/@racehuntermedia7879"
               target="_blank"
               class="home__social-link"
             >
-              <i class="ri-twitter-fill"></i>
+              <i class="ri-youtube-fill"></i>
             </a>
           </div>
 
@@ -503,11 +502,11 @@
                 <i class="ri-facebook-box-fill"></i>
               </a>
               <a
-                href="https://twitter.com/"
+                href="https://youtube.com/"
                 target="_blank"
                 class="footer__social"
               >
-                <i class="ri-twitter-fill"></i>
+                <i class="ri-youtube-fill"></i>
               </a>
               <a
                 href="https://www.instagram.com/"
